rounding in Matlab

--- a/sw02/notes/Makefile
+++ b/sw02/notes/Makefile
@@ -1,12 +1,15 @@
 .PHONY: all build clean
 
-all: build clean
+all: round build clean
 
 build:
 	pdflatex notes_sw02.tex
 	pdflatex notes_sw02.tex
 	pdflatex notes_sw02.tex
 
+round:
+	octave round_matlab.m
+	pdfcrop round_matlab.pdf round_matlab.pdf
 clean:
 	rm -f *.aux
 	rm -f *.lof
